# remote_management_cli

./: Cargo.toml  LICENSE  README.md
src/: main.rs
