[package]
name = "remote_management"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28", features = ["full"] }
clap = { version = "4.3", features = ["derive"] }
sysinfo = "0.29"
ssh2 = "0.9"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
prettytable-rs = "0.10"
rpassword = "7.2"
ratatui = "0.25.0"
crossterm = "0.27.0"
humansize = "2.1.3"
byte-unit = "4.0.19"
chrono = "0.4"
